config/manifests/stable/network-policy-allow-ingress-to-diskmaker-metrics.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: lso-allow-ingress-to-diskmaker-metrics
spec:
  podSelector:
    matchLabels:
      openshift.storage.lso.network-policy.diskmaker-metrics: allow
  ingress:
  - ports:
    - protocol: TCP
      port: 9393
    from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-monitoring
  policyTypes:
  - Ingress
