config/manifests/stable/network-policy-default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: lso-default-deny-all
spec:
  podSelector:
    matchLabels:
      openshift.storage.lso.network-policy.deny-all: default
  policyTypes:
  - Ingress
  - Egress
